added public dir

--- a/client/scss/abstracts/_variables.scss
+++ b/client/scss/abstracts/_variables.scss
@@ -49,6 +49,7 @@ $border-radius: 5px;
 
 $bp-1200: 75em;
 $bp-1100: 68.75em;
+$bp-1000: 62.5em;
 $bp-900: 56.25em;
 $bp-600: 37.5em;
 $bp-500: 31.25em;
