--- a/client/scss/pages/_home.scss
+++ b/client/scss/pages/_home.scss
@@ -9,8 +9,7 @@
 }
 
 .section-skills {
-  padding: 10rem 0;
-
+  padding: 10rem 0 10rem 0;
   background: url(/img/skillsbac.png) no-repeat center fixed,
     linear-gradient(
       to right bottom,
@@ -33,13 +32,12 @@
   }
 }
 
-.section-tours {
-  background-color: $color-grey-light-1;
-  padding: 25rem 0 15rem 0;
-  margin-top: -19rem;
+.section-projects {
+  // background-color: $color-grey-light-1;
+  padding: 2rem 0 15rem 0;
 
   @include respond(tab-port) {
-    padding: 20 0 10 0;
+    padding: 20rem 0 10rem 0;
   }
 }
 
@@ -63,7 +61,7 @@
 .book {
   width: 95%;
   margin: auto;
-  background-image: linear-gradient(transparent 50%), url(/img/launch.jpg);
+  background-image: linear-gradient(transparent 0%), url(/img/launch.jpg);
   // background-size: contain;
   background-repeat: no-repeat;
   background-size: 95% 98%;
@@ -71,6 +69,7 @@
   background-position: center;
   border-radius: $border-radius;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+  
 
   @include respond(tab-land) {
     background-image: linear-gradient(
