--- a/client/scss/components/_button.scss
+++ b/client/scss/components/_button.scss
@@ -44,10 +44,14 @@
     color: white;
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 20px;
+    padding: 0.5rem 1.55rem;
+    // padding: 15px 20px;
     display: inline-block;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-right: 1rem;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
   }
 
   &--code {
@@ -56,8 +60,12 @@
     text-transform: uppercase;
     text-decoration: none;
     padding: 15px 20px;
+    padding: 0.5rem 1.55rem;
     display: inline-block;
-    border-radius: 10px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
   }
 
   &--green {
