--- a/client/scss/components/_card.scss
+++ b/client/scss/components/_card.scss
@@ -28,30 +28,6 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
-      // &-1 {
-      //   background-image: linear-gradient(
-      //     to right bottom,
-      //     $color-secondary-light,
-      //     $color-secondary-dark
-      //   );
-      // }
-
-      &-2 {
-        background-image: linear-gradient(
-          to right bottom,
-          $color-primary-light,
-          $color-primary-dark
-        );
-      }
-
-      &-3 {
-        background-image: linear-gradient(
-          to right bottom,
-          $color-tertiary-light,
-          $color-tertiary-dark
-        );
-      }
     }
   }
 
@@ -69,29 +45,14 @@
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
-    // -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    // clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     overflow: hidden;
     border-radius: $border-radius;
-
-    // &--1 {
-    //   background-image: linear-gradient(
-    //       to right bottom,
-    //       $color-secondary-light,
-    //       $color-secondary-dark
-    //     ),
-    //     url(/img/devcon.jpg);
-    // }
 
     &--1 {
       background-image: url(/img/devcon.jpg);
     }
     &--2 {
       background-image: url(/img/githubfinder.jpg);
-      // margin-right: auto;
-      // margin-left: 3rem;
-      background-size: 100% 98%;
-      background-repeat: no-repeat;
     }
     &--3 {
       background-image: url(/img/budgetApp.jpg);
@@ -125,6 +86,7 @@
     text-transform: uppercase;
     text-align: center;
     color: $color-white;
+    // color: $color-primary-dark;
     position: absolute;
     top: 18rem;
     // right: 2rem;
@@ -132,53 +94,12 @@
   }
 
   &__heading-span {
+    width: 100%;
     padding: 0.75rem 1.2rem;
     box-decoration-break: clone;
-    border-radius: 10px;
-    &--1 {
-      background-color: $color-primary-dark;
-    }
-    &--2 {
-      // background-image: linear-gradient(
-      //   to right bottom,
-      //   rgba($color-grey-dark-3, 0.65),
-      //   rgba($color-grey-dark-3, 0.98)
-      // );
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary, 1),
-        rgba($color-grey-dark-3, 1)
-      );
-    }
-    &--3 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary, 1),
-        rgba($color-grey-dark-3, 1)
-      );
-    }
-
-    &--4 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary, 1),
-        rgba($color-grey-dark-3, 1)
-      );
-    }
-    &--5 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary, 1),
-        rgba($color-grey-dark-3, 1)
-      );
-    }
-    &--6 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary, 1),
-        rgba($color-grey-dark-3, 1)
-      );
-    }
+    border-radius: 5px;
+    background-color: $color-primary-dark;
+    
   }
   &__details {
     height: 100%;
@@ -219,59 +140,52 @@
     text-align: left;
     flex-wrap: wrap;
   }
-  &__price-box {
-    text-align: left;
-    color: $color-black;
-    margin-bottom: 8rem;
-  }
 
   &__project-title {
     font-size: 1.6rem;
     font-weight: 600;
     text-transform: uppercase;
+    color: $color-primary-dark;
   }
 
   &__project-text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 400;
     margin-top: 1rem;
-    // text-transform: uppercase;
   }
 
-  &__price-only {
-    font-size: 1.4rem;
-    text-transform: uppercase;
-  }
-
-  &__price-value {
-    font-size: 6rem;
-    font-weight: 100;
-  }
-
-  .card__button-container {
-    display: flex;
-    // justify-content: center;
-    // align-content: center;
-    align-items: center;
-  }
+  
 
   .card-buttons {
-    position: absolute;
     display: flex;
-    // // bottom: 2px;
-    // text-align: center;
-    justify-self: center;
-    // justify-content: center;
-    margin-left: 2rem;
-    margin-right: auto;
-    align-self: flex-end;
+    flex-direction: row;
+
+    & a {
+      font-size: 1.3rem;
+    }
   }
 
   // Media Query ************************************
 
   // @include respond(tab-port) {
 
-  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+  @media only screen and (max-width: $bp-1100), only screen and (hover: none) {
+    &__project-text {
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-top: 0.5rem;
+    }
+  }
+
+  @media only screen and (max-width: $bp-1000), only screen and (hover: none) {
+    &__project-text {
+      font-size: 1.1rem;
+      font-weight: 400;
+      margin-top: 0.5rem;
+    }
+  }
+
+  @media only screen and (max-width: $bp-900), only screen and (hover: none) {
     height: auto;
     border-radius: $border-radius;
     background-color: $color-white;
@@ -285,7 +199,6 @@
       &--back {
         transform: rotateY(0);
         clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-        // margin-top: -4rem;
       }
     }
 
@@ -308,15 +221,20 @@
       width: 100%;
       text-align: center;
       padding: 4rem;
-      padding-top: 6rem;
+      padding-top: 4rem;
       // margin-top: -4rem;
     }
     &__price-box {
-      margin-bottom: 3rem;
+      margin-bottom: 5rem;
     }
 
-    &__price-value {
-      font-size: 4rem;
+    &__project-text {
+      font-size: 1.6rem;
+      font-weight: 400;
+      margin-top: 0.5rem;
     }
+    // &__price-value {
+    //   font-size: 4rem;
+    // }
   }
 }
