--- a/public/main.css
+++ b/public/main.css
@@ -2049,9 +2049,9 @@ body {
 
 .section-skills {
   padding: 10rem 0 10rem 0;
-  background: url(/img/skillsbac.png) no-repeat center fixed, -webkit-gradient(linear, left top, right bottom, from(rgba(129, 186, 180, 0.8)), to(rgba(78, 125, 120, 0.8)));
-  background: url(/img/skillsbac.png) no-repeat center fixed, -o-linear-gradient(left top, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
-  background: url(/img/skillsbac.png) no-repeat center fixed, linear-gradient(to right bottom, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
+  background: -webkit-gradient(linear, left top, right bottom, from(rgba(129, 186, 180, 0.8)), to(rgba(78, 125, 120, 0.8)));
+  background: -o-linear-gradient(left top, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
+  background: linear-gradient(to right bottom, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
   background-size: 95vw auto;
   -webkit-transform: skewY(-7deg);
       -ms-transform: skewY(-7deg);
@@ -2108,16 +2108,10 @@ body {
 .book {
   width: 95%;
   margin: auto;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent)), url(/img/launch.jpg);
-  background-image: -o-linear-gradient(transparent 0%), url(/img/launch.jpg);
-  background-image: linear-gradient(transparent 0%), url(/img/launch.jpg);
-  background-repeat: no-repeat;
-  background-size: 95% 98%;
-  background-size: cover;
-  background-position: center;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  background: url(/img/launch.jpg) no-repeat center fixed, -webkit-gradient(linear, left top, right bottom, from(rgba(129, 186, 180, 0.8)), to(rgba(78, 125, 120, 0.8)));
+  background: url(/img/launch.jpg) no-repeat center fixed, -o-linear-gradient(left top, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
+  background: url(/img/launch.jpg) no-repeat center fixed, linear-gradient(to right bottom, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
+  background-size: 95vw auto;
 }
 
 @media only screen and (max-width: 75em) {
