--- a/client/scss/pages/_home.scss
+++ b/client/scss/pages/_home.scss
@@ -67,14 +67,6 @@
 .book {
   width: 95%;
   margin: auto;
-  // background-image: linear-gradient(transparent 0%), url(/img/launch.jpg);
-  // // background-size: contain;
-  // background-repeat: no-repeat;
-  // background-size: 95% 98%;
-  // background-size: cover;
-  // background-position: center;
-  // border-radius: $border-radius;
-  // box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
   background: url(/img/launch.jpg) no-repeat center fixed,
     linear-gradient(
@@ -86,14 +78,8 @@
   background-size: 95vw auto;
 
   @include respond(tab-land) {
-    background-image: linear-gradient(
-        105deg,
-        rgba($color-white, 0.9) 0%,
-        rgba($color-white, 0.9) 65%,
-        transparent 65%
-      ),
-      url(/img/nat-10.jpg);
-    background-size: cover;
+    
+   
   }
 
   @include respond(tab-port) {
@@ -113,9 +99,9 @@
     width: 95%;
     padding: 6rem;
 
-    @include respond(tab-land) {
-      width: 65%;
-    }
+    // @include respond(tab-land) {
+    //   width: 65%;
+    // }
 
     @include respond(tab-port) {
       width: 100%;
