--- a/client/scss/components/_button.scss
+++ b/client/scss/components/_button.scss
@@ -51,7 +51,7 @@
     margin-right: 1rem;
     position: absolute;
     bottom: 20px;
-    left: 20px;
+    left: 50%;
   }
 
   &--code {
@@ -65,7 +65,7 @@
     border-radius: 5px;
     position: absolute;
     bottom: 20px;
-    right: 20px;
+    right: 5%;
   }
 
   &--green {
