--- a/client/scss/components/_card.scss
+++ b/client/scss/components/_card.scss
@@ -156,6 +156,7 @@
   .card-buttons {
     display: flex;
     flex-direction: row;
+    align-items: center;
 
     & a {
       font-size: 1.3rem;
