--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -16,6 +16,7 @@
 @import 'components/popup';
 @import 'components/bio';
 @import 'components/skills-graph';
+@import 'components/projects';
 
 @import 'layout/header';
 @import 'layout/grid';
