--- a/client/scss/components/_button.scss
+++ b/client/scss/components/_button.scss
@@ -44,14 +44,14 @@
     color: white;
     text-transform: uppercase;
     text-decoration: none;
-    padding: 0.5rem 1.55rem;
-    // padding: 15px 20px;
+    padding: 0.5rem 0.5rem;
     display: inline-block;
     border-radius: 5px;
     margin-right: 1rem;
     position: absolute;
     bottom: 20px;
-    left: 50%;
+    right: 60px;
+    width: 45px;
   }
 
   &--code {
@@ -59,13 +59,13 @@
     color: white;
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 20px;
-    padding: 0.5rem 1.55rem;
+    padding: 0.5rem 0.5rem;
     display: inline-block;
     border-radius: 5px;
     position: absolute;
     bottom: 20px;
-    right: 5%;
+    right: 15px;
+    width: 45px;
   }
 
   &--green {
