--- a/client/scss/components/_projects.scss
+++ b/client/scss/components/_projects.scss
@@ -1,6 +1,6 @@
-.section-project {
-  background-color: lightgrey;
-}
+// .section-project {
+//   // background-color: $color-grey-light-1;
+// }
 
 .project {
   &__row {
