--- a/public/main.css
+++ b/public/main.css
@@ -1452,6 +1452,7 @@ body {
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
+  -webkit-animation-iteration-count: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
@@ -1478,7 +1479,7 @@ body {
   background-color: dodgerblue;
   color: white;
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-card-sum {
