--- a/client/scss/components/_projects.scss
+++ b/client/scss/components/_projects.scss
@@ -49,6 +49,7 @@
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
+  -webkit-animation-iteration-count: rotateY(180deg);
   transform: rotateY(180deg);
 }
 
@@ -58,8 +59,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  // height: calc(22vw * 1.75);
-  // width: 22vw;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
@@ -74,6 +73,7 @@
 .flip-card-back {
   background-color: dodgerblue;
   color: white;
+  -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 
