--- a/client/scss/components/_projects.scss
+++ b/client/scss/components/_projects.scss
@@ -48,10 +48,17 @@
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
+// .flip-card:hover .flip-card-inner {
+//   -webkit-animation-iteration-count: rotateY(180deg);
+//   transform: rotateY(180deg);
+// }
+
+.flip-card-over .flip-card-inner-over {
   -webkit-animation-iteration-count: rotateY(180deg);
   transform: rotateY(180deg);
 }
+
+
 
 /* Position the front and back side */
 .flip-card-front,
