--- a/public/main.css
+++ b/public/main.css
@@ -5,6 +5,13 @@
 @include respond(big-desktop) {  }//> 1800 px
 
 */
+/*
+@include respond(tab-land) {  }   // < 1200px
+@include respond(tab-port) {  }   //< 900 px
+@include respond(phone) {  }      //< 600 px
+@include respond(big-desktop) {  }//> 1800 px
+
+*/
 @-webkit-keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -1416,21 +1423,28 @@ body {
 
 @media only screen and (max-width: 75em) {
   .flip-card {
-    height: calc(30vw * 1.75);
-    width: 30vw;
+    margin-bottom: 5rem;
+  }
+}
+
+@media only screen and (max-width: 75em) {
+  .flip-card {
+    height: calc(22vw * 3.5);
+    width: 22vw;
   }
 }
 
 @media only screen and (max-width: 56.25em) {
   .flip-card {
-    height: calc(45vw * 1.75);
-    width: 45vw;
+    height: calc(33vw * 2.5);
+    width: 33vw;
+    margin-bottom: 6rem;
   }
 }
 
 @media only screen and (max-width: 37.5em) {
   .flip-card {
-    height: calc(55vw * 1.75);
+    height: calc(55vw * 2.5);
     width: 55vw;
   }
 }
@@ -1457,7 +1471,21 @@ body {
           transform: rotateY(180deg);
 }
 
-.flip-card-over .flip-card-inner-over {
+@media only screen and (max-width: 75em) {
+  .flip-card:hover .flip-card-inner {
+    -webkit-animation-iteration-count: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+  }
+}
+
+.flipper {
+  -webkit-animation-iteration-count: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.unflipper {
   -webkit-animation-iteration-count: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
@@ -1474,6 +1502,18 @@ body {
   backface-visibility: hidden;
 }
 
+@media only screen and (max-width: 75em) {
+  .flip-card-front,
+  .flip-card-back {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    -webkit-backface-visibility: visible;
+    /* Safari */
+    backface-visibility: visible;
+  }
+}
+
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
   background-color: #f2efef;
@@ -1482,10 +1522,17 @@ body {
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
   color: white;
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
+}
+
+@media only screen and (max-width: 75em) {
+  .flip-card-back {
+    color: transparent;
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+  }
 }
 
 .flip-card-sum {
@@ -1511,6 +1558,13 @@ body {
   padding: 0.75rem;
 }
 
+@media only screen and (max-width: 50em) {
+  .flip-card-sum ul li {
+    font-size: 1.3rem;
+    padding: 0.5rem;
+  }
+}
+
 .flip-card-sum ul li:not(:last-child) {
   border-bottom: 1px solid #eee;
 }
@@ -1522,6 +1576,12 @@ body {
 .flip-card-back-title {
   margin-top: 2rem;
   color: #4e7d78;
+}
+
+@media only screen and (max-width: 75em) {
+  .flip-card-back-title {
+    display: none;
+  }
 }
 
 .flip-card-picture {
@@ -1563,6 +1623,20 @@ body {
   background-image: url(/img/clickPlane.jpg);
 }
 
+@media only screen and (max-width: 75em) {
+  .flip-card-picture {
+    height: calc(30vs * 0.4);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .flip-card-picture {
+    height: calc(55vw * 0.6);
+  }
+}
+
 .flip-card-back-detail {
   background-color: #f7f7f7;
   height: 85%;
@@ -1574,42 +1648,24 @@ body {
   text-align: left;
   color: black;
   list-style: none;
-  font-size: 1.6rem;
-}
-
-@media only screen and (max-width: 87.5em) {
-  .flip-card-back-detail ul {
-    font-size: 1.3rem;
-  }
-}
-
-@media only screen and (max-width: 75em) {
-  .flip-card-back-detail ul {
-    font-size: 1.8rem;
-  }
+  font-size: 1.4rem;
 }
 
 @media only screen and (max-width: 62.5em) {
   .flip-card-back-detail ul {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 }
 
 @media only screen and (max-width: 56.25em) {
   .flip-card-back-detail ul {
-    font-size: 2.2rem;
+    font-size: 1.6rem;
   }
 }
 
-@media only screen and (max-width: 43.75em) {
+@media only screen and (max-width: 50em) {
   .flip-card-back-detail ul {
-    font-size: 1.9rem;
-  }
-}
-
-@media only screen and (max-width: 31.25em) {
-  .flip-card-back-detail ul {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
 
@@ -1619,26 +1675,46 @@ body {
 }
 
 .flip-card-buttons {
+  background-color: #f7f7f7;
   height: 15%;
 }
 
 .flip-btn--app,
 .flip-btn--code {
   display: block;
-  padding: 1rem;
+  padding-top: 0.5rem;
   text-decoration: none;
   color: white;
+  margin: 0;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 0.5rem 0;
+}
+
+@media only screen and (max-width: 62.5em) {
+  .flip-btn--app,
+  .flip-btn--code {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 56.25em) {
+  .flip-btn--app,
+  .flip-btn--code {
+    font-size: 1.6rem;
+  }
 }
 
 .flip-btn--app {
   background-color: #81bab4;
-  height: 50%;
-  border-bottom: 1px solid white;
 }
 
 .flip-btn--code {
   background-color: #4e7d78;
-  height: 50%;
 }
 
 .header {
